--- a/public/faqs.html
+++ b/public/faqs.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./src/stylesheets/normalize.css" />
   <link rel="stylesheet" href="./src/stylesheets/main.css" />
   <link rel="stylesheet" href="./src/stylesheets/styles.css" />
-  <link rel="stylesheet" href="./src/stylesheets/contact.css" />
+  <link rel="stylesheet" href="./src/stylesheets/faqs.css" />
 </head>
 
 <body>
@@ -74,7 +74,164 @@
   </nav>
 
   <div class="container">
-
+    <div id="faqs-wrapper">
+      <h4>Bantay <span>Bayan</span></h4>
+      <h1>Frequently Asked Questions</h1>
+      <div id="faq-flex">
+        <div class="faq-container">
+          <h2>Criteria</h2>
+          <hr>
+          <div class="faq-box" id="faq-1" onclick="toggleFaqBox(1)">
+            <header class="header">
+              What is the blah blah blah blah sample question?
+              <div class="anchor-down">
+                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M8 9.69062L11.9688 5.71874C12.2625 5.42499 12.7375 5.42499 13.0281 5.71874C13.3187 6.01249 13.3187 6.48749 13.0281 6.78124L8.53125 11.2812C8.24687 11.5656 7.79062 11.5719 7.49687 11.3031L2.96875 6.78437C2.82188 6.63749 2.75 6.44374 2.75 6.25312C2.75 6.06249 2.82188 5.86874 2.96875 5.72187C3.2625 5.42812 3.7375 5.42812 4.02812 5.72187L8 9.69062Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+              <div class="anchor-up" style="display: none">
+                <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6 1.8094L2.03125 5.78127C1.7375 6.07502 1.2625 6.07502 0.971875 5.78127C0.68125 5.48752 0.68125 5.01252 0.971875 4.71877L5.46875 0.218774C5.75313 -0.0656014 6.20938 -0.0718518 6.50313 0.196898L11.0312 4.71565C11.1781 4.86252 11.25 5.05627 11.25 5.2469C11.25 5.43752 11.1781 5.63127 11.0312 5.77815C10.7375 6.0719 10.2625 6.0719 9.97188 5.77815L6 1.8094Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+            </header>
+            <div class="body" style="display: none">
+              This is the answer to the blah blah question. This is the answer to the blah blah question. This is the
+              answer to the blah blah question. This is the answer to the blah blah question. This is the answer to
+              the blah blah question.
+            </div>
+          </div>
+          <div class="faq-box" id="faq-2" onclick="toggleFaqBox(2)">
+            <header class="header">
+              What is the blah blah blah blah sample question?
+              <div class="anchor-down">
+                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M8 9.69062L11.9688 5.71874C12.2625 5.42499 12.7375 5.42499 13.0281 5.71874C13.3187 6.01249 13.3187 6.48749 13.0281 6.78124L8.53125 11.2812C8.24687 11.5656 7.79062 11.5719 7.49687 11.3031L2.96875 6.78437C2.82188 6.63749 2.75 6.44374 2.75 6.25312C2.75 6.06249 2.82188 5.86874 2.96875 5.72187C3.2625 5.42812 3.7375 5.42812 4.02812 5.72187L8 9.69062Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+              <div class="anchor-up" style="display: none">
+                <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6 1.8094L2.03125 5.78127C1.7375 6.07502 1.2625 6.07502 0.971875 5.78127C0.68125 5.48752 0.68125 5.01252 0.971875 4.71877L5.46875 0.218774C5.75313 -0.0656014 6.20938 -0.0718518 6.50313 0.196898L11.0312 4.71565C11.1781 4.86252 11.25 5.05627 11.25 5.2469C11.25 5.43752 11.1781 5.63127 11.0312 5.77815C10.7375 6.0719 10.2625 6.0719 9.97188 5.77815L6 1.8094Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+            </header>
+            <div class="body" style="display: none">
+              This is the answer to the blah blah question. This is the answer to the blah blah question. This is the
+              answer to the blah blah question. This is the answer to the blah blah question. This is the answer to
+              the blah blah question.
+            </div>
+          </div>
+          <div class="faq-box" id="faq-3" onclick="toggleFaqBox(3)">
+            <header class="header">
+              What is the blah blah blah blah sample question?
+              <div class="anchor-down">
+                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M8 9.69062L11.9688 5.71874C12.2625 5.42499 12.7375 5.42499 13.0281 5.71874C13.3187 6.01249 13.3187 6.48749 13.0281 6.78124L8.53125 11.2812C8.24687 11.5656 7.79062 11.5719 7.49687 11.3031L2.96875 6.78437C2.82188 6.63749 2.75 6.44374 2.75 6.25312C2.75 6.06249 2.82188 5.86874 2.96875 5.72187C3.2625 5.42812 3.7375 5.42812 4.02812 5.72187L8 9.69062Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+              <div class="anchor-up" style="display: none">
+                <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6 1.8094L2.03125 5.78127C1.7375 6.07502 1.2625 6.07502 0.971875 5.78127C0.68125 5.48752 0.68125 5.01252 0.971875 4.71877L5.46875 0.218774C5.75313 -0.0656014 6.20938 -0.0718518 6.50313 0.196898L11.0312 4.71565C11.1781 4.86252 11.25 5.05627 11.25 5.2469C11.25 5.43752 11.1781 5.63127 11.0312 5.77815C10.7375 6.0719 10.2625 6.0719 9.97188 5.77815L6 1.8094Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+            </header>
+            <div class="body" style="display: none">
+              This is the answer to the blah blah question. This is the answer to the blah blah question. This is the
+              answer to the blah blah question. This is the answer to the blah blah question. This is the answer to
+              the blah blah question.
+            </div>
+          </div>
+        </div>
+        <div class="faq-container">
+          <h2>Legal</h2>
+          <hr>
+          <div class="faq-box" id="faq-4" onclick="toggleFaqBox(4)">
+            <header class="header">
+              What is the blah blah blah blah sample question?
+              <div class="anchor-down">
+                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M8 9.69062L11.9688 5.71874C12.2625 5.42499 12.7375 5.42499 13.0281 5.71874C13.3187 6.01249 13.3187 6.48749 13.0281 6.78124L8.53125 11.2812C8.24687 11.5656 7.79062 11.5719 7.49687 11.3031L2.96875 6.78437C2.82188 6.63749 2.75 6.44374 2.75 6.25312C2.75 6.06249 2.82188 5.86874 2.96875 5.72187C3.2625 5.42812 3.7375 5.42812 4.02812 5.72187L8 9.69062Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+              <div class="anchor-up" style="display: none">
+                <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6 1.8094L2.03125 5.78127C1.7375 6.07502 1.2625 6.07502 0.971875 5.78127C0.68125 5.48752 0.68125 5.01252 0.971875 4.71877L5.46875 0.218774C5.75313 -0.0656014 6.20938 -0.0718518 6.50313 0.196898L11.0312 4.71565C11.1781 4.86252 11.25 5.05627 11.25 5.2469C11.25 5.43752 11.1781 5.63127 11.0312 5.77815C10.7375 6.0719 10.2625 6.0719 9.97188 5.77815L6 1.8094Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+            </header>
+            <div class="body" style="display: none">
+              This is the answer to the blah blah question. This is the answer to the blah blah question. This is the
+              answer to the blah blah question. This is the answer to the blah blah question. This is the answer to
+              the blah blah question.
+            </div>
+          </div>
+          <div class="faq-box" id="faq-5" onclick="toggleFaqBox(5)">
+            <header class="header">
+              What is the blah blah blah blah sample question?
+              <div class="anchor-down">
+                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M8 9.69062L11.9688 5.71874C12.2625 5.42499 12.7375 5.42499 13.0281 5.71874C13.3187 6.01249 13.3187 6.48749 13.0281 6.78124L8.53125 11.2812C8.24687 11.5656 7.79062 11.5719 7.49687 11.3031L2.96875 6.78437C2.82188 6.63749 2.75 6.44374 2.75 6.25312C2.75 6.06249 2.82188 5.86874 2.96875 5.72187C3.2625 5.42812 3.7375 5.42812 4.02812 5.72187L8 9.69062Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+              <div class="anchor-up" style="display: none">
+                <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6 1.8094L2.03125 5.78127C1.7375 6.07502 1.2625 6.07502 0.971875 5.78127C0.68125 5.48752 0.68125 5.01252 0.971875 4.71877L5.46875 0.218774C5.75313 -0.0656014 6.20938 -0.0718518 6.50313 0.196898L11.0312 4.71565C11.1781 4.86252 11.25 5.05627 11.25 5.2469C11.25 5.43752 11.1781 5.63127 11.0312 5.77815C10.7375 6.0719 10.2625 6.0719 9.97188 5.77815L6 1.8094Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+            </header>
+            <div class="body" style="display: none">
+              This is the answer to the blah blah question. This is the answer to the blah blah question. This is the
+              answer to the blah blah question. This is the answer to the blah blah question. This is the answer to
+              the blah blah question.
+            </div>
+          </div>
+          <div class="faq-box" id="faq-6" onclick="toggleFaqBox(6)">
+            <header class="header">
+              What is the blah blah blah blah sample question?
+              <div class="anchor-down">
+                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M8 9.69062L11.9688 5.71874C12.2625 5.42499 12.7375 5.42499 13.0281 5.71874C13.3187 6.01249 13.3187 6.48749 13.0281 6.78124L8.53125 11.2812C8.24687 11.5656 7.79062 11.5719 7.49687 11.3031L2.96875 6.78437C2.82188 6.63749 2.75 6.44374 2.75 6.25312C2.75 6.06249 2.82188 5.86874 2.96875 5.72187C3.2625 5.42812 3.7375 5.42812 4.02812 5.72187L8 9.69062Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+              <div class="anchor-up" style="display: none">
+                <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6 1.8094L2.03125 5.78127C1.7375 6.07502 1.2625 6.07502 0.971875 5.78127C0.68125 5.48752 0.68125 5.01252 0.971875 4.71877L5.46875 0.218774C5.75313 -0.0656014 6.20938 -0.0718518 6.50313 0.196898L11.0312 4.71565C11.1781 4.86252 11.25 5.05627 11.25 5.2469C11.25 5.43752 11.1781 5.63127 11.0312 5.77815C10.7375 6.0719 10.2625 6.0719 9.97188 5.77815L6 1.8094Z"
+                    fill="#333333" />
+                </svg>
+              </div>
+            </header>
+            <div class="body" style="display: none">
+              This is the answer to the blah blah question. This is the answer to the blah blah question. This is the
+              answer to the blah blah question. This is the answer to the blah blah question. This is the answer to
+              the blah blah question.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer>
@@ -110,6 +267,8 @@
         <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
+
+  <script src="./src/scripts/faqs.js"></script>
 </body>
 
 </html>
