team page almost done (pics lacking)

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="/">
+    <a href="index.html" rel="noopener noreferrer">
       <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
@@ -59,9 +59,9 @@
       <li>
         <div class="forms">Forms</div>
         <div class="formsdrop">
-          <a href="weekly-reports.html">Weekly Reports</a>
-          <a href="help-desk.html">Help Desk</a>
-          <a href="volunteers.html">Volunteers</a>
+          <a href="weekly-reports.html" rel="noopener noreferrer">Weekly Reports</a>
+          <a href="help-desk.html" rel="noopener noreferrer">Help Desk</a>
+          <a href="volunteers.html" rel="noopener noreferrer">Volunteers</a>
         </div>
       </li>
       <li>
@@ -92,7 +92,7 @@
         Gamit ang Bantay Bayan Helpdesk, maaaring mag-sumite ng tanong o reklamo ang bawat mamamayan ukol sa
         pag-responde ng LGU sa <br> COVID-19.
       </p>
-      <a href="#">SEEK LEGAL AID</a>
+      <a href="help-desk.html" rel="noopener noreferrer">SEEK LEGAL AID</a>
     </div>
 
     <img src="./src/assets/images/Image.png" class="helpdesk_pic">
@@ -108,7 +108,7 @@
       <p>
         Gamit ang isang diagnostic tool (survey), linggo-linggong inaaseso ng bawat bantay-bayan ang LGU base.
       </p>
-      <a href="#">SUBMIT LGU RESPONSE</a>
+      <a href="weekly-reports.html" rel="noopener noreferrer">SUBMIT LGU RESPONSE</a>
     </div>
   </div>
 
@@ -118,7 +118,7 @@
         <h1>Mag-volunteer Na!</h1>
         <h3>Basahin ang primer &#8594;</h3>
       </div>
-      <a href="#">VOLUNTEER NOW</a>
+      <a href="volunteers.html" rel="noopener noreferrer">VOLUNTEER NOW</a>
       <div class="minimen">
         <img src="./src/assets/images/Volunteers.png">
         <img src="./src/assets/images/Volunteers.png">
