--- a/public/teams.html
+++ b/public/teams.html
@@ -76,13 +76,16 @@
   <div class="container">
     <div class="teams_structure">
       <div class="teams_header">
-
+        <h1>Bantay Bayan Structure</h1>
       </div>
-      <img src="./src/assets/images/Structure.png" alt="organizational structure">
+      <div class="teams_structure_body">
+        <img src="./src/assets/images/Structure.png" alt="organizational structure">
+      </div>
     </div>
 
-    <div class="teams_goodgovph">
+    <div class="team">
       <div class="teams_header">
+        <h1>GoodGovPH Team</h1>
       </div>
       <div class="team_members">
         <div class="member">
@@ -178,17 +181,18 @@
       </div>
     </div>
 
-    <div class="teams_dsc">
+    <div class="teams">
       <div class="teams_header">
+        <h1>Developers Students Club</h1>
       </div>
       <div class="team_members">
         <div class="member">
-          <img src="./src/assets/members/download.png" alt="member">
+          <img src="./src/assets/members/Sison_DSC.png" alt="member">
           <h3>Harvey Sison</h3>
           <h5>WEB DEVELOPMENT</h5>
         </div>
         <div class="member">
-          <img src="./src/assets/members/download.png" alt="member">
+          <img src="./src/assets/members/Go_DSC.jpg" alt="member">
           <h3>Tanzell Go</h3>
           <h5>WEB DEVELOPMENT</h5>
         </div>
