Tanzell  team page (#7)
* with team html

* team page almost done (pics lacking)

Co-authored-by: Hjkun77 <harveyjaysison@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,9 @@
       <li>
         <div class="forms">Forms</div>
         <div class="formsdrop">
-          <a href="weekly-reports.html">Weekly Reports</a>
-          <a href="help-desk.html">Help Desk</a>
-          <a href="volunteers.html">Volunteers</a>
+          <a href="weekly-reports.html" rel="noopener noreferrer">Weekly Reports</a>
+          <a href="help-desk.html" rel="noopener noreferrer">Help Desk</a>
+          <a href="volunteers.html" rel="noopener noreferrer">Volunteers</a>
         </div>
       </li>
       <li>
