--- a/public/teams.html
+++ b/public/teams.html
@@ -74,7 +74,134 @@
   </nav>
 
   <div class="container">
+    <div class="teams_structure">
+      <div class="teams_header">
+        <h1>Bantay Bayan Structure</h1>
+      </div>
+      <div class="teams_structure_body">
+        <img src="./src/assets/images/Structure.png" alt="organizational structure">
+      </div>
+    </div>
 
+    <div class="team">
+      <div class="teams_header">
+        <h1>GoodGovPH Team</h1>
+      </div>
+      <div class="team_members">
+        <div class="member">
+          <img src="./src/assets/members/Dexter Yang.jpg" alt="member">
+          <h3>Dexter Yang</h3>
+          <h5>OVERALL DIRECTOR</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/download.png" alt="member">
+          <h3>Azhley De Quiroz</h3>
+          <h5>OVERALL DIRECTOR</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Volunteer Engagement_ Reizzha Razon.jpg" alt="member">
+          <h3>Reizzha Razon</h3>
+          <h5>VOLUNTEER ENGAGEMENT</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/M&E Ina Mallari.jpg" alt="member">
+          <h3>Ina Mallari</h3>
+          <h5>MONITORING & EVALUATION</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/download.png" alt="member">
+          <h3>Paul Roset</h3>
+          <h5>MONITORING & EVALUATION</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/M&E_ Anne Rey.jpeg" alt="member">
+          <h3>Anne Rey</h3>
+          <h5>MONITORING & EVALUATION</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Legal_ Atty. Julia Pineda.JPG" alt="member">
+          <h3>Atty. Julia Pineda</h3>
+          <h5>LEGAL RESPONSE</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/download.png" alt="member">
+          <h3>Charles De Belen</h3>
+          <h5>LEGAL RESPONSE</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Non-Legal_ Bryan Ezra C. Gonzales.JPG" alt="member">
+          <h3>Bryan Ezra Gonzales</h3>
+          <h5>NON-LEGAL RESPONSE</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Crisis Education_ Ervine Jules B. Sape.png" alt="member">
+          <h3>Ervine Jules Sape</h3>
+          <h5>CRISIS EDUCATION</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Crisis Education_ Carmela Adelantar.jpg" alt="member">
+          <h3>Carmela Adelantar</h3>
+          <h5>CRISIS EDUCATION</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Usap Tayo_ Batalla.jpg"alt="member">
+          <h3>Cristina Batalla</h3>
+          <h5>USAP TAYO</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/download.png"alt="member">
+          <h3>John Mabagos</h3>
+          <h5>USAP TAYO</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Communications_ Aster Mostrales.jpeg" alt="member">
+          <h3>Aster Morales</h3>
+          <h5>COMMUNICATIONS</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/_Communications - Dana Ramos.jpg" alt="member">
+          <h3>Dana Ramos</h3>
+          <h5>COMMUNICATIONS</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Communications - Francia Arizabal.jpg" alt="member">
+          <h3>Francia Arizabal</h3>
+          <h5>COMMUNICATIONS</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Externals and Marketing_ Vina Mengua.jpg" alt="member">
+          <h3>Vina Mengua</h3>
+          <h5>EXTERNALS & MARKETING </h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/download.png" alt="member">
+          <h3>Bettina Martirez</h3>
+          <h5>EXTERNALS & MARKETING</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="teams">
+      <div class="teams_header">
+        <h1>Developers Students Club</h1>
+      </div>
+      <div class="team_members">
+        <div class="member">
+          <img src="./src/assets/members/Sison_DSC.png" alt="member">
+          <h3>Harvey Sison</h3>
+          <h5>WEB DEVELOPMENT</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/Go_DSC.jpg" alt="member">
+          <h3>Tanzell Go</h3>
+          <h5>WEB DEVELOPMENT</h5>
+        </div>
+        <div class="member">
+          <img src="./src/assets/members/download.png" alt="member">
+          <h3>Patricia Ramos</h3>
+          <h5>UX DESIGN</h5>
+        </div>
+    </div> 
   </div>
 
   <footer>
