head not popping out in mobile view

--- a/public/about.html
+++ b/public/about.html
@@ -74,18 +74,19 @@
       </li>
     </ul>
   </nav>
-
-  <div class="ovw_bantaybayan">
-    <div class="ovw_bantaybayan_content">
-      <h6>ANO ANG BANTAY BAYAN?</h6>
-      <p>
-        Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang
-        ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga
-        mamamayan sa panahon ng krisis tulad ng COVID-19
-      </p>
+  <div class="whitebg">
+    <div class="ovw_bantaybayan">
+      <div class="ovw_bantaybayan_content">
+        <h5>ANO ANG BANTAY BAYAN?</h5>
+        <p>
+          Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang
+          ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga
+          mamamayan sa panahon ng krisis tulad ng COVID-19
+        </p>
+      </div>
     </div>
-    <img src="./src/assets/images/bantay_bayan_logo.png" class="ovw_bantaybayan_logo" alt="logo">
   </div>
+
 
   <div class="enm_bantaybayan">
     <div class="enm_bantaybayan_label">
