--- a/public/weekly-reports.html
+++ b/public/weekly-reports.html
@@ -52,7 +52,20 @@
       <li>
         <a class="about" href="about.html">About</a>
       </li>
-      <li>
+
+      <!--Indepent Forms-->
+      <li class="formsdrop_independent">
+        <a href="weekly-reports.html" rel="noopener noreferrer" class="WR_Form">Weekly Reports</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="help-desk.html" rel="noopener noreferrer" class="HD_Form">Help Desk</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="volunteers.html" rel="noopener noreferrer" class="V_Form">Volunteers</a>
+      </li>
+      <!--End-->
+
+      <li id="forms_id">
         <div class="forms">Forms</div>
         <div class="formsdrop">
           <a href="weekly-reports.html">Weekly Reports</a>
