--- a/public/help-desk.html
+++ b/public/help-desk.html
@@ -121,8 +121,8 @@
 
     <div class="footerDSC">
       <hr />
-      <label>Passionately Designed and
-        <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
+      <label>Passionately Designed and Developed by
+        <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
 </body>
