--- a/public/teams.html
+++ b/public/teams.html
@@ -157,12 +157,12 @@
           <h5>CRISIS EDUCATION</h5>
         </div>
         <div class="member">
-          <img src="./src/assets/members/Usap Tayo_ Batalla.jpg"alt="member">
+          <img src="./src/assets/members/Usap Tayo_ Batalla.jpg" alt="member">
           <h3>Cristina Batalla</h3>
           <h5>USAP TAYO</h5>
         </div>
         <div class="member">
-          <img src="./src/assets/members/download.png"alt="member">
+          <img src="./src/assets/members/download.png" alt="member">
           <h3>John Mabagos</h3>
           <h5>USAP TAYO</h5>
         </div>
@@ -214,42 +214,42 @@
           <h3>Patricia Ramos</h3>
           <h5>UX DESIGN</h5>
         </div>
-    </div> 
-  </div>
-
-  <footer>
-    <div class="footerContent">
-      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
-      <div class="footerSubContent">
-        <div class="footerIcons">
-          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
-            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
-              <path
-                d="M29.5 13.1666H26.25C24.8134 13.1666 23.4357 13.7373 22.4198 14.7531C21.404 15.769 20.8333 17.1467 20.8333 18.5833V21.8333H17.5833V26.1666H20.8333V34.8333H25.1667V26.1666H28.4167L29.5 21.8333H25.1667V18.5833C25.1667 18.296 25.2808 18.0204 25.484 17.8173C25.6871 17.6141 25.9627 17.5 26.25 17.5H29.5V13.1666Z"
-                stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </a>
-
-          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
-            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
-              <path
-                d="M35 15C34.0424 15.6755 32.9821 16.1922 31.86 16.53C31.2577 15.8376 30.4573 15.3467 29.567 15.124C28.6767 14.9012 27.7395 14.9572 26.8821 15.2845C26.0247 15.6118 25.2884 16.1944 24.773 16.9538C24.2575 17.7131 23.9877 18.6124 24 19.53V20.53C22.2426 20.5756 20.5013 20.1859 18.931 19.3955C17.3607 18.6051 16.0103 17.4387 15 16C15 16 11 25 20 29C17.9405 30.398 15.4872 31.099 13 31C22 36 33 31 33 19.5C32.9991 19.2215 32.9723 18.9436 32.92 18.67C33.9406 17.6635 34.6608 16.3928 35 15V15Z"
-                stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </a>
-        </div>
-        <label>&copy; 2020 GoodGovPH. All Rights Reserved.</label>
       </div>
     </div>
 
-    <div class="footerDSC">
-      <hr />
-      <label>Passionately Designed and
-        <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
-    </div>
-  </footer>
+    <footer>
+      <div class="footerContent">
+        <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+        <div class="footerSubContent">
+          <div class="footerIcons">
+            <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
+                <path
+                  d="M29.5 13.1666H26.25C24.8134 13.1666 23.4357 13.7373 22.4198 14.7531C21.404 15.769 20.8333 17.1467 20.8333 18.5833V21.8333H17.5833V26.1666H20.8333V34.8333H25.1667V26.1666H28.4167L29.5 21.8333H25.1667V18.5833C25.1667 18.296 25.2808 18.0204 25.484 17.8173C25.6871 17.6141 25.9627 17.5 26.25 17.5H29.5V13.1666Z"
+                  stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </a>
+
+            <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
+                <path
+                  d="M35 15C34.0424 15.6755 32.9821 16.1922 31.86 16.53C31.2577 15.8376 30.4573 15.3467 29.567 15.124C28.6767 14.9012 27.7395 14.9572 26.8821 15.2845C26.0247 15.6118 25.2884 16.1944 24.773 16.9538C24.2575 17.7131 23.9877 18.6124 24 19.53V20.53C22.2426 20.5756 20.5013 20.1859 18.931 19.3955C17.3607 18.6051 16.0103 17.4387 15 16C15 16 11 25 20 29C17.9405 30.398 15.4872 31.099 13 31C22 36 33 31 33 19.5C32.9991 19.2215 32.9723 18.9436 32.92 18.67C33.9406 17.6635 34.6608 16.3928 35 15V15Z"
+                  stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </a>
+          </div>
+          <label>&copy; 2020 GoodGovPH. All Rights Reserved.</label>
+        </div>
+      </div>
+
+      <div class="footerDSC">
+        <hr />
+        <label>Passionately Designed and Developed by
+          <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
+      </div>
+    </footer>
 </body>
 
 </html>
