Tanzell  home about (#8)
* head not popping out in mobile view

* homepage fixed forms mobile navigation for review

* forms navbar changed for mobile, fixed some issues with logo and burger icon positions in different views

* great

Co-authored-by: Hjkun77 <harveyjaysison@gmail.com>

--- a/public/about.html
+++ b/public/about.html
@@ -55,7 +55,20 @@
       <li>
         <a class="about" href="about.html">About</a>
       </li>
-      <li>
+
+      <!--Indepent Forms-->
+      <li class="formsdrop_independent">
+        <a href="weekly-reports.html" rel="noopener noreferrer" class="WR_Form">Weekly Reports</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="help-desk.html" rel="noopener noreferrer" class="HD_Form">Help Desk</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="volunteers.html" rel="noopener noreferrer" class="V_Form">Volunteers</a>
+      </li>
+      <!--End-->
+
+      <li id="forms_id">
         <div class="forms">Forms</div>
         <div class="formsdrop">
           <a href="weekly-reports.html">Weekly Reports</a>
@@ -74,18 +87,19 @@
       </li>
     </ul>
   </nav>
-
-  <div class="ovw_bantaybayan">
-    <div class="ovw_bantaybayan_content">
-      <h6>ANO ANG BANTAY BAYAN?</h6>
-      <p>
-        Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang
-        ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga
-        mamamayan sa panahon ng krisis tulad ng COVID-19
-      </p>
+  <div class="whitebg">
+    <div class="ovw_bantaybayan">
+      <div class="ovw_bantaybayan_content">
+        <h5>ANO ANG BANTAY BAYAN?</h5>
+        <p>
+          Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang
+          ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga
+          mamamayan sa panahon ng krisis tulad ng COVID-19
+        </p>
+      </div>
     </div>
-    <img src="./src/assets/images/bantay_bayan_logo.png" class="ovw_bantaybayan_logo" alt="logo">
   </div>
+
 
   <div class="enm_bantaybayan">
     <div class="enm_bantaybayan_label">
@@ -345,8 +359,8 @@
 
     <div class="footerDSC">
       <hr />
-      <label>Passionately Designed and
-        <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
+      <label>Passionately Designed and Developed by
+        <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
 </body>
