--- a/public/contact.html
+++ b/public/contact.html
@@ -53,7 +53,20 @@
       <li>
         <a class="about" href="about.html">About</a>
       </li>
-      <li>
+
+      <!--Indepent Forms-->
+      <li class="formsdrop_independent">
+        <a href="weekly-reports.html" rel="noopener noreferrer" class="WR_Form">Weekly Reports</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="help-desk.html" rel="noopener noreferrer" class="HD_Form">Help Desk</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="volunteers.html" rel="noopener noreferrer" class="V_Form">Volunteers</a>
+      </li>
+      <!--End-->
+
+      <li id="forms_id">
         <div class="forms">Forms</div>
         <div class="formsdrop">
           <a href="weekly-reports.html">Weekly Reports</a>
@@ -168,8 +181,8 @@
 
     <div class="footerDSC">
       <hr />
-      <label>Passionately Designed and
-        <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
+      <label>Passionately Designed and Developed by
+        <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
   <script src="./src/scripts/jquery.min.js"></script>
