--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,20 @@
       <li>
         <a class="about" href="about.html">About</a>
       </li>
-      <li>
+
+      <!--Indepent Forms-->
+      <li class="formsdrop_independent">
+        <a href="weekly-reports.html" rel="noopener noreferrer" class="WR_Form">Weekly Reports</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="help-desk.html" rel="noopener noreferrer" class="HD_Form">Help Desk</a>
+      </li>
+      <li class="formsdrop_independent">
+        <a href="volunteers.html" rel="noopener noreferrer" class="V_Form">Volunteers</a>
+      </li>
+      <!--End-->
+
+      <li id="forms_id">
         <div class="forms">Forms</div>
         <div class="formsdrop">
           <a href="weekly-reports.html" rel="noopener noreferrer">Weekly Reports</a>
@@ -78,11 +91,6 @@
 
 
   <div class="main">
-    <div class="main_content">
-      <img src="./src/assets/images/bantay_bayan_logo.png">
-      <br>
-      <label>Para sa mabuting pamamahala sa panahon ng krisis!</label>
-    </div>
   </div>
 
   <div class="helpdesk">
@@ -95,13 +103,13 @@
       <a href="help-desk.html">SEEK LEGAL AID</a>
     </div>
 
-    <img src="./src/assets/images/Image.png" class="helpdesk_pic">
+    <img src="./src/assets/images/help_desk.png" class="helpdesk_pic">
 
   </div>
 
   <div class="survey">
 
-    <img class="survey_pic" src="./src/assets/images/Image.png" alt="survey">
+    <img class="survey_pic" src="./src/assets/images/weekly_response.png" alt="survey">
 
     <div class="survey_content">
       <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
@@ -158,8 +166,8 @@
 
     <div class="footerDSC">
       <hr />
-      <label>Passionately Designed and
-        <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
+      <label>Passionately Designed and Developed by
+        <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
 </body>
